--- a/index-en.html
+++ b/index-en.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="en" dir="ltr">
 <head>
 <meta charset="UTF-8">
-<title>المهاجر | مدونة فكر ومعرفة</title>
+<title>Almohajer | Blog & Insights</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 body{font-family:Arial;background:#f7f7f7;margin:0;color:#1c1c1c}
@@ -15,22 +15,22 @@ h1{font-size:42px}
 </head>
 <body>
 <header>
-<div><strong>المهاجر</strong></div>
+<div><strong>Almohajer</strong></div>
 <nav>
-<a href="index.html">الرئيسية</a>
-<a href="blog.html">المقالات</a>
-<a href="index-en.html" class="lang">EN</a>
+<a href="index-en.html">Home</a>
+<a href="blog-en.html">Blog</a>
+<a href="index.html" class="lang">AR</a>
 </nav>
 </header>
 
 <section class="hero">
-<h1>مدونة المهاجر</h1>
-<p>مساحة فكرية راقية للكتابة عن التجربة، التحول، والمعنى في عالم سريع التغيّر.</p>
+<h1>Almohajer Blog</h1>
+<p>A refined space for writing about experience, transformation, and meaning.</p>
 </section>
 
 <footer>
-<div>© 2026 المهاجر</div>
-<div>محتوى • فكر • تجربة</div>
+<div>© 2026 Almohajer</div>
+<div>Thought • Experience • Insight</div>
 </footer>
 </body>
 </html>
