Add Arabic blog post about the importance of journey

--- a/post.html
+++ b/post.html
@@ -1,1 +1,61 @@
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+  <meta charset="UTF-8">
+  <title>لماذا الرحلة أهم من الوصول؟ | المهاجر</title>
+  <meta name="description" content="تأمل فكري عن الرحلة الداخلية والتحول الإنساني في مدونة المهاجر.">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body{
+      font-family: 'Arial', sans-serif;
+      background:#f7f7f7;
+      color:#1c1c1c;
+      line-height:1.9;
+      margin:0;
+      padding:0;
+    }
+    article{
+      max-width:800px;
+      margin:80px auto;
+      background:#ffffff;
+      padding:40px;
+    }
+    h1{
+      font-size:36px;
+      margin-bottom:20px;
+    }
+    p{
+      font-size:18px;
+      margin-bottom:18px;
+    }
+    .back{
+      display:block;
+      margin-top:40px;
+      font-weight:bold;
+      text-decoration:none;
+      color:#1c1c1c;
+    }
+  </style>
+</head>
+<body>
 
+<article>
+  <h1>لماذا الرحلة أهم من الوصول؟</h1>
+
+  <p>لم أكن أظن أن الطريق نفسه يحمل كل هذا المعنى. كنت أظن دائمًا أن المهم هو النقطة الأخيرة، المكان الذي نصل إليه، اللحظة التي نقول فيها: ها قد انتهينا.</p>
+
+  <p>لكن مع الوقت، بدأت ألاحظ شيئًا مختلفًا. كل ما كنت أبحث عنه في “الوصول” كنت أتعلمه بالفعل أثناء الرحلة.</p>
+
+  <p>في الطريق نتغير دون إعلان، نتخلى عن أفكار كنا نتمسك بها، ونكتشف هشاشتنا، ثم قوتنا، ونسير أحيانًا ونحن لا نعرف بالضبط إلى أين.</p>
+
+  <p>الرحلة تُربكنا، نعم، لكنها أيضًا تعيد ترتيبنا من الداخل.</p>
+
+  <p>أما الوصول، فغالبًا ما يكون مجرد توقف مؤقت، نلتقط فيه أنفاسنا قبل أن نبدأ رحلة أخرى.</p>
+
+  <p>ربما لهذا السبب لا يكون السؤال الحقيقي: إلى أين وصلت؟ بل: <strong>من أصبحت في الطريق؟</strong></p>
+
+  <a class="back" href="blog.html">← العودة إلى المقالات</a>
+</article>
+
+</body>
+</html>
